screenshots now with a soft and a hard column. Added chronopic3-methacrylate
svn path=/trunk/; revision=353

--- a/web/data/langs/_ca/Pages/faq
+++ b/web/data/langs/_ca/Pages/faq
@@ -57,7 +57,7 @@ Sí, escrigui a l'adreça que es veu en aquesta imatge:
 
 <li>Per què és necessari un cronòmetre si qualsevol ordinador pot fer aquesta funció ? 
 <p>
-Els sistemes operatius moderns són multifuncions, això significa que l'ordinador assigna petites quantitats de temps per la realizació de cada una de las tasques, de manera que, sembla executar-les totes al mateix temps. L'ordinador s'encarrega de captar els estímuls procedents de la plataforma de contactes, per les seves característiques, de vegades, trigarà en adonar-se d'aquests events perquè estarà ocupat amb altres funcions.<i>assumptes</i> això es tradueix en problemes de fiabilitat causats pel fet que dos salts de la mateixa durada podrien registrar-se amb medicions diferents per circumstàncies aleatories.<br>
+Els sistemes operatius moderns són multifuncions, això significa que l'ordinador assigna petites quantitats de temps per la realizació de cada una de las tasques, de manera que, sembli executar-les totes al mateix temps. L'ordinador s'encarrega de captar els estímuls procedents de la plataforma de contactes, per les seves característiques, de vegades, l'ordinador trigarà en adonar-se d'aquests events perquè estarà ocupat amb altres <i>assumptes</i>, això es tradueix en problemes de fiabilitat causats pel fet que dos salts de la mateixa durada podrien registrar-se amb medicions diferents per circumstàncies aleatories.<br>
 El cronòmetre extern que hem construït està especialitzat en la captació d'esdeveniments a la plataforma de contactes, per això no hi haurà errors de fiabilitat en els registres que farà.<br>
 El Chronopic permetrà, a més, la possibilitat de fer servir el Chronojump o la seva versió reduïda el Chronojump-mini en quasi qualsevol dispositiu electrònic, i n'assegura una bona compatibilitat en el futur.<br>
 Per més informació llegiu aquest article: <a href=":::articleLink:::/chronojump_sistema_de_medida_congreso_gpul.pdf">"Projecte Chronojump: Sistema de Mesura de la Capacitat del Salt fent servir programari i equipament lliures"</a>.
