--- a/po/oc.po
+++ b/po/oc.po
@@ -9,13 +9,13 @@ msgstr ""
 "Project-Id-Version: oc\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2008-02-19 20:16+0100\n"
-"PO-Revision-Date: 2007-12-27 15:01+0100\n"
+"PO-Revision-Date: 2008-02-20 00:11+0100\n"
 "Last-Translator: Yannig Marchegay (Kokoyaya) <yannig@marchegay.org>\n"
 "Language-Team: Occitan <ubuntu-l10n-oci@lists.ubuntu.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=(n > 1);\n"
+"Plural-Forms: nplurals=2; plural=(n > 1);"
 
 #: ../glade/chronojump.glade.h:1
 msgid " "
@@ -1886,7 +1886,7 @@ msgstr ""
 #: ../src/gui/chronojump.cs:2998 ../src/gui/run.cs:904 ../src/gui/run.cs:948
 #: ../src/gui/run.cs:980
 msgid "Tracks"
-msgstr ""
+msgstr "Pistas"
 
 #: ../src/execute/run.cs:752
 msgid "AVG Speed"
