--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-02-25  Jorge Gonzalez  <jorgegonz@svn.gnome.org>
+
+	* es.po: Updated Spanish translation by Eduardo Retamales
+
 2008-02-19  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* LINGUAS: Add nb
