restored Makefile added missing src/gui/generic.cs
restored Makefile
added missing src/gui/generic.cs

svn path=/trunk/; revision=365

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,9 @@
 CHRONOJUMP DETAILED CHANGELOG:
 
+25 feb 2008 (2)
+	restored Makefile
+	added missing src/gui/generic.cs
+
 25 feb 2008
 	0.62-svn3
 	chronopic.cs now has a public method to flush called Flush
