--- a/web/data/langs/_gl/Pages/faq
+++ b/web/data/langs/_gl/Pages/faq
@@ -54,7 +54,7 @@ Si, ao prezo que consideres oportuno. Cabo considerar a licenza do hardware: <a 
 <p>
 Escribe un correo á:
 
-<img align="top" src=":::imageLink:::/xaviblas-correo.png" width="215" height="32">
+<img align="top" src=":::imageLink:::/xaviblas-correo.png">
 
 
 <li>Por que é necesario un cronómetro se calquera ordenador pode facer esa función?
