--- a/web/data/langs/_pt/Pages/faq
+++ b/web/data/langs/_pt/Pages/faq
@@ -54,7 +54,7 @@ Sim, ao preço que quiser. Você precisa seguir o hardware licença: <a href="ht
 <p>
 Sim, por favor escreva um e-mail para o endereço indicado nesta imagem:
 
-<img align="top" src=":::imageLink:::/xaviblas-correo.png" width="215" height="32">
+<img align="top" src=":::imageLink:::/xaviblas-correo.png">
 
 <li>Porque é necessário um cronômetro se qualquer computador pode realizar essa função?<p>
 <p>
