--- a/web/data/langs/_en/Pages/faq
+++ b/web/data/langs/_en/Pages/faq
@@ -53,7 +53,7 @@ Yes, at the price you want. You need to follow the hardware license: <a href="ht
 <p>
 Yes, please write an email to the address in this image:
 
-<img align="top" src=":::imageLink:::/xaviblas-correo.png" width="215" height="32">
+<img align="top" src=":::imageLink:::/xaviblas-correo.png">
 
 
 <li>Why the need of a chronometer if any computer can cover this function?
