--- a/web/data/langs/_ca/Pages/faq
+++ b/web/data/langs/_ca/Pages/faq
@@ -39,11 +39,11 @@ Escriu un correu a la llista <a href="contact_ca.html">chronojump-list</a> i bus
 <ol>
 <p><li>On puc comprar el Chronopic?
 <p>
-Consulteu la <a href="construction_ca.html">pàgina de Construcció</a>.
+Consulteu la <a href="hardware_ca.html">pàgina de Maquinari</a>.
 
 <p><li>Puc construir o fabricar de forma industrial el Chronopic?</p>
 <p>
-Sí, amb la informació que hi ha la <a href="construction_ca.html">pàgina de Construcció</a> pots fabricar-lo de forma manual o industrial a qualsevol país. 
+Sí, amb la informació que hi ha la <a href="hardware_ca.html">pàgina de Maquinari</a> pots fabricar-lo de forma manual o industrial a qualsevol país. 
 
 <p><li>Puc vendre el Chronopic?</p>
 <p>
