--- a/web/data/langs/_es/Pages/faq
+++ b/web/data/langs/_es/Pages/faq
@@ -40,11 +40,11 @@ Escribe un correo a la lista <a href="contact_es.html">chronojump-list</a> y ver
 
 <p><li>¿Dónde puedo comprar el Chronopic?
 <p>
-Consulte la <a href="construction_es.html">página de Construcción</a>.
+Consulte la <a href="hardware_es.html">página de Hardware</a>.
 
 <p><li>¿Puedo construir o fabricar de forma industrial el Chronopic?<p>
 <p>
-Sí, con la información que se encuentra en la <a href="construction_es.html">página de Construcción</a> puede fabricarlo de forma manual o industrial en cualquier país.
+Sí, con la información que se encuentra en la <a href="hardware_es.html">página de Hardware</a> puede fabricarlo de forma manual o industrial en cualquier país.
 
 <p><li>¿Puedo vender el Chronopic?</p>
 <p>
