--- a/web/data/langs/_gl/Pages/faq
+++ b/web/data/langs/_gl/Pages/faq
@@ -40,11 +40,11 @@ Escribe un correo á lista <a href="contact_gl.html">chronojump-list</a> e verem
 
 <p><li>Onde podo mercar o Chronopic?<p>
 <p>
-Lea la <a href="construction_gl.html">páxina de Construción</a>.
+Lea la <a href="hardware_gl.html">páxina de Hardware</a>.
 
 <p><li>Podo construír o fabricar de forma industrial o Chronopic?<p>
 <p>
-Si, coa información que se atopa na <a href="construction_gl.html">páxina de Construción</a> pode fabricalo de forma manual ou industrial en calquera país.
+Si, coa información que se atopa na <a href="hardware_gl.html">páxina de Hardware</a> pode fabricalo de forma manual ou industrial en calquera país.
 
 <p><li># ¿Podo vender o Chronopic?</p>
 <p>
