--- a/web/data/langs/_pt/Pages/faq
+++ b/web/data/langs/_pt/Pages/faq
@@ -40,11 +40,11 @@ Escreva um e-mail à lista <a href="contact_es.html">chronojump-list</a> e verem
 
 <p><li>Onde posso comprar o Chronopic?
 <p>
-Leia la <a href="construction_pt.html">páxina de Construção</a>.
+Leia la <a href="hardware_pt.html">páxina de Hardware</a>.
 
 <p><li>Como posso construir o fabricar industrialmente o chronopic?<p>
 <p>
-Sim, a página web: <a href="construction_pt.html">páxina de Construção</a> você encontrará a construir-lo manualmente ou industrial em cada país.
+Sim, a página web: <a href="hardware_pt.html">páxina de Hardware</a> você encontrará a construir-lo manualmente ou industrial em cada país.
 
 <p><li>¿Posso vender o Chronopic?</p>
 <p>
