some web changes
svn path=/trunk/; revision=378

--- a/web/data/langs/_ca/Pages/faq
+++ b/web/data/langs/_ca/Pages/faq
@@ -53,7 +53,7 @@ Sí, al preu que consideris oportú. En tot moment cal que consideris la llicèn
 <p>
 Sí, escrigui a l'adreça que es veu en aquesta imatge:
 
-<img align="top" src=":::imageLink:::/xaviblas-correo.png">
+<img align="absmiddle" src=":::imageLink:::/xaviblas-correo.png">
 
 <li>Per què és necessari un cronòmetre si qualsevol ordinador pot fer aquesta funció ? 
 <p>
