--- a/web/data/langs/_es/Pages/faq
+++ b/web/data/langs/_es/Pages/faq
@@ -54,7 +54,7 @@ Sí, al precio que consideres oportuno. Cabe considerar la licencia del hardware
 <p>
 Sí, escriba a la dirección que se ve en esta imagen:
 
-<img align="top" src=":::imageLink:::/xaviblas-correo.png">
+<img align="absmiddle" src=":::imageLink:::/xaviblas-correo.png">
 
 
 
