--- a/web/data/langs/_gl/Pages/faq
+++ b/web/data/langs/_gl/Pages/faq
@@ -93,10 +93,8 @@ Si, creouse un modo simulado no que se executan saltos, carreiras de duración a
 
 <p><li>Cando sairá a versión 1.0 e que prestacións terá?
 <p>Ata o momento (versión :::currentVersion:::) ChronoJump xa ten máis prestacións que o resto de solucións comerciais e non-comerciais das que temos coñecemento. 
-<!--Pero aínda hai moitos aspectos que incorporar e/ou mellorar que se van describindo no arquivo de <a href="http://cvs.gnome.org/viewcvs/chronojump/roadmap.txt"><i>roadmap</i> ou folla de ruta</a> (inglés).
--->
 <br>
-Se desexa realizar peticións de novas prestacións non dubide en escribir unha mensaxe á lista  <a href="contact_gl.html">chronojump-list</a>.
+Se desexa realizar peticións de novas prestacións non dubide en escribir unha mensaxe á lista  <a href="contact_gl.html">chronojump-list</a>. Leer más <a href="features_gl.html">información de las características</a> [TRADUCIR].
 
 <p><li>Como podo saber as últimas novidades do proxecto?
 <p>
