--- a/web/data/langs/_es/Pages/faq
+++ b/web/data/langs/_es/Pages/faq
@@ -94,10 +94,8 @@ Sí, se ha creado un modo simulado en que se ejecutan saltos, carreras de duraci
 <p><li>¿Cuándo saldrá la versión 1.0 y qué prestaciones tendrá?
 <p>
 Hasta la fecha (versión :::currentVersion:::) Chronojump ya tiene más prestaciones que el resto de soluciones comerciales y no-comerciales de las que tenemos conocimiento.
-<!-- Pero aún hay muchos aspectos a incorporar-mejorar que se van describiendo en el archivo de <a href="http://cvs.gnome.org/viewcvs/chronojump/roadmap.txt"><i>roadmap</i> o hoja de ruta</a> (inglés).
--->
 <br>
-Si desea realizar peticiones de características no dude en escribir un correo a la lista de correo <a href="contact_es.html">chronojump-list</a>.
+Si desea realizar peticiones de características no dude en escribir un correo a la lista de correo <a href="contact_es.html">chronojump-list</a>. Leer más <a href="features_es.html">información de las características</a>.
 
 <p><li>¿Cómo puedo saber las últimas novedades del proyecto?
 <p>
