--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,62 @@
 CHRONOJUMP DETAILED CHANGELOG:
 
+10 May 2008
+	0.6.2.9 (0.7 pre-release)
+	db changed to 0.56
+	Main window to 800x600
+
+	No more use of terminal:
+	-installjammer creates the executables for not being run on terminal (
+	it seems can do the other way, but it's better to forget terminal now)
+	Logs (new class):
+	-Every Console.Write* now writes also to a file using Log.Write*
+	-If chronojump crashes, at next start it points to the log of standard
+	output and error log (crash trace) because it's called in linux
+	redirecting error to samefile with '>>' see chronojump.sh
+	mono chronojump.prg $LOG_DATE 2>>$LOG_FILE
+	Pending see how to do it in windows (play with .bat file)
+	-If chronojump ends ok, log is deleted
+	-All Console calls to Log (except askContinueChronojump) use
+	string.Format for send only one argument to Log.Write*
+
+	New start (all without terminal):
+	-if crashed before, show error window and continues with normal start
+	when user closes window
+	-if big problm appears, show error window and quit when user closes
+	window
+	-if all is ok, start normal
+	-now no more control of chronojump execution two times
+	-added a button for crash voluntary for testing purposes
+
+	Done default session sport, speciallity, level:
+	-creation of combos at gui/session
+	-hide/show combos depending on radios
+	-print label depending on combos
+	-sensitive or not accept button depending on widgets
+	-add sport done
+	-session is recorded with sport stuff
+	-shown/manage default values at gui/person add (are required)
+	-shown/manage default values to add multiple (printing a label)
+	-show person stuff at export, report
+	-show person stuff at load session 
+	-Level "Sedentary" changed to "Sedentary/Ocasional practice"
+	now when selected, sport none is not automatically selected.
+
+	dateBorn: 
+	-on new person is undefined until they change it they cannot accept
+	-on new person multiple is undefined and value its 01/01/0001 (DateTime.MinValue)
+
+	Other:
+	-Simulated execution shows two warning images
+	-genericWin has a range selectable range for spinbutton
+	-improved report: css and logo now as files (logo also as assemblie).
+	-Fixes bug with stream copy. Done also on installjammer
+	-Session add & edit in same class
+	-Improved database moving
+	-Fixed bug with path readed by script convert_database.sh (since installjammer)
+	-at installjammer added readme_update_version.txt, readable with it's own component
+	-Fixed bug with dates on data from really old chronojump versions
+
 23 apr 2008
 	Fixed bug in personAddMultiple when it's different than 10
 	Fixed bug in export to CSV (decimals were 0)
