--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2008-05-10 Xavier de Blas <xaviblas@gmail.com>
+
+	* es.po: Updated Spanish translation by Xavier de Blas
+	* ca.po: Updated Spanish translation by Xavier de Blas
+
 2008-04-10  Jorge Gonzalez  <jorgegonz@svn.gnome.org>
 
 	* es.po: Updated Spanish translation by Eduardo Retamales
